dist_man1_MANS=

if BUILD_HORUSD
  dist_man1_MANS+=horusd.1
endif

if ENABLE_QT
  dist_man1_MANS+=horus-qt.1
endif

if BUILD_HORUS_CLI
  dist_man1_MANS+=horus-cli.1
endif

if BUILD_HORUS_TX
  dist_man1_MANS+=horus-tx.1
endif

if BUILD_HORUS_UTIL
  dist_man1_MANS+=horus-util.1
endif

if ENABLE_WALLET
if BUILD_HORUS_WALLET
  dist_man1_MANS+=horus-wallet.1
endif
endif
